# sharktask

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
django_shark_task/: admin.py  apps.py  urls.py
django_shark_task/fields/: admin.py  serializers.py
django_shark_task/migrations/: 0001_initial.py  0002_create_base_entities.py
django_shark_task/task/: admin.py  link_manager.py  models.py  permission_manager.py  serializers.py  task_manager.py  views.py
django_shark_task/utils/: utils.py
django_shark_task/workflow/: admin.py  models.py  serializers.py
shark_task/: asgi.py  settings.py  urls.py  wsgi.py
shark_task_core/: admin.py  apps.py  const.py  link_manager.py  models.py  serializers.py  task_manager.py  task_type_manager.py  urls.py  utils.py  views.py
shark_task_core/migrations/: 0001_initial.py  0002_auto_20230831_0345.py
shark_task_fields/: admin.py  apps.py  models.py  screen_manager.py  serializers.py  task_fields_manager.py  urls.py  views.py
shark_task_fields/migrations/: 0001_initial.py  0002_auto_20230831_0345.py
shark_task_utils/: admin_utils.py
shark_task_workflow/: admin.py  apps.py  const.py  models.py  serializers.py  urls.py  views.py
shark_task_workflow/migrations/: 0001_initial.py  0002_auto_20230903_0722.py
