[metadata]
name = django-shark-task
version = 0.0.1
description = A Django implemented task manager api.
long_description = file: README.md
url = https://www.example.com/
author = Karev Vitalii
author_email = wwkarev@gmail.com
license = MIT License

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    django
    djangorestframework
    django-json-widget
    jsonschema
    pydantic

[options.packages.find]
where=
include = *django_shark_task*
